--- a/index.html
+++ b/index.html
@@ -6,52 +6,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="styles/reset.css" />
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" /> -->
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" /> 
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> 
+  <link rel="stylesheet" href="assets/css/style.css" />
   <title>Weather Dashboard</title>
 </head>
 
 <body>
-  <header class="container-fluid text-center text-white bg-dark p-2 weather-header">
-    <h1>Weather Dashboard</h1>
-  </header>
-
-  <!-- max-width for ultra wide resolutions -->
-  <div class="container-fluid" style="max-width: 1400px">
+  <nav class="navbar navbar-dark bg-dark text-center">
+    <h1 class="text-light m-auto">Weather Dashboard</h1>
+  </nav>
+  <div class="container-fluid">
     <div class="row">
-      <aside class="col-lg-3 pb-3">
-        <h2 id="form-heading" class="mt-1 h3 form-label">
-          Search for a City:
-        </h2>
-        <form id="search-form" class="form">
-          <div class="form-inline form-group">
-            <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
-                aria-labelledby="form-heading" aria-controls="today forecast" />
-              <div class="input-group-append">
-                <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
-                  Search
-                </button>
-                <hr class="hr weather-hr" />
-              </div>
+      <div class="col-12 col-md-5 bg-light">
+        <form class="form-inline" id="city-search">
+          <h4>Search for a City:</h4>
+          <input type="text" class="form-control" id="search-input">
+          <button type="submit" class="btn btn-primary form-control">S</button>
+        </form>
+
+        <div class="card hide" id="search-history">
+
+        </div>
+      </div>
+      <div class="col-12 col-md-7">
+        <div class="row">
+          <div class="col-12">
+            <div class="card hide" id="current-weather">
+
             </div>
           </div>
-        </form>
-        <div class="list-group" id="history"></div>
-      </aside>
-
-      <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+          <div class="col-12 hide" id="five-day">
+            <h3>5-Day Forecast:</h3>
+          </div>
+        </div>
       </div>
+
     </div>
   </div>
+
+  <script src="assets/js/script.js"></script>
+</body>
 
   <!-- Moment.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="script.js"></script>
+  <script src="assets/js/script.js"></script>
 </body>
 
 </html>
