--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="assets/css/style.css" />
   <title>Weather Dashboard</title>
 </head>
@@ -16,61 +14,24 @@
     <h1>Weather Dashboard</h1>
   </header>
 
-
   <!-- max-width for ultra wide resolutions -->
   <div class="container">
     <aside class="search-city-section">
-      <h2>Search for a City</h2>
+      <h2>Search for a City:</h2>
       <div class="search-section">
-        <input type="text" placeholder="Please enter a city name">
-        <button class="btn">Search</button>
+        <input id="searchInput" type="text" placeholder="Please enter a city name">
+        <button class="btn searchBtn">Search</button>
       </div>
-
-      <button class="btn">London</button>
+      <hr>
+      <div class="historyCityName hide"></div>
     </aside>
-
+  
     <main class="weather-section">
-      <section class="today-weather">
-        <div class="today-header-section">
-          <h2>London (17/12/2022)</h2>
-        </div>
-        <p>Temp: 1°C</p>
-        <p>Wind: 3.48 kph</p>
-        <p id="daily-weather-last-item">Humidity: 86%</p>
-      </section>
-      <h3>5-Day Forecast:</h3>
-      <section class="fiveDays-weather">
-        <div class="weather-boxes">
-          <h4>05/02/2023</h4>
-          <p>Temp: 1°C</p>
-          <p>Wind: 3.48 kph</p>
-          <p>Humidity: 65%</p>
-        </div>
-        <div class="weather-boxes">
-          <h4>06/02/2023</h4>
-          <p>Temp: 1°C</p>
-          <p>Wind: 3.48 kph</p>
-          <p>Humidity: 65%</p>
-        </div>
-        <div class="weather-boxes">
-          <h4>07/02/2023</h4>
-          <p>Temp: 1°C</p>
-          <p>Wind: 3.48 kph</p>
-          <p>Humidity: 65%</p>
-        </div>
-        <div class="weather-boxes">
-          <h4>18/02/2022</h4>
-          <p>Temp: 1°C</p>
-          <p>Wind: 3.48 kph</p>
-          <p>Humidity: 65%</p>
-        </div>
-        <div class="weather-boxes">
-          <h4>18/11/2022</h4>
-          <p>Temp: 1°C</p>
-          <p>Wind: 3.48 kph</p>
-          <p>Humidity: 65%</p>
-        </div>
-      </section>
+      <section class="daily-weather hide"></section>
+
+      <h3 class="fiveDayWeatherTitle hide">5-Day Forecast:</h3>
+
+      <section class="fiveDays-weather"></section>
     </main>
   </div>
 
@@ -79,7 +40,7 @@
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="assets/js/script.js"></script>
-  <script src="https://kit.fontawesome.com/b287c0d047.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
+
